labour/test/invalid/invalid_three_start_holds.labour
bouldering_wall "ThreeStartsWall": {
  routes [
    bouldering_route "too many starts": {
      grade: "5A",
      grid_base_point: { x: 0, y: 0 },
      holds ["0001", "0002", "0003", "0004"]
    }
  ],
  volumes [
    circle: {
      pos: { x: 50, y: 50 },
      depth: 10,
      radius: 30,
      front_holds [
        hold "0001": {
          pos: { x: 0, y: 0 },
          shape: "1",
          colours [ red ],
          start_hold: 1
        },
        hold "0002": {
          pos: { x: 5, y: 5 },
          shape: "1",
          colours [ red ],
          start_hold: 2
        },
        hold "0003": {
          pos: { x: 10, y: 10 },
          shape: "1",
          colours [ red ],
          start_hold: 1
        },
        hold "0004": {
          pos: { x: 15, y: 15 },
          shape: "1",
          colours [ red ]
        }
      ]
    }
  ]
}
